--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
+    "swiper": "^7.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
