--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,13 @@
 {
-  "hosting": {
+  "hosting": { "rewrites": [ {
+    "source": "**",
+    "destination": "/index.html"
+  } ],
     "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
